# haoInvest

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
haoinvest/: __init__.py  config.py  db.py  fx.py  http_retry.py  journal.py  models.py
haoinvest/analysis/: __init__.py  cache.py  fundamental.py  math_utils.py  peer.py  registry.py  report.py  risk.py  signals.py  technical.py  trends.py  volume.py
haoinvest/cli/: __init__.py  _shared.py  analyze.py  formatters.py  guardrails.py  journal.py  market.py  portfolio.py  strategy.py
haoinvest/engine/: __init__.py  aggregation.py  databridge.py  optimization_engine.py  risk_engine.py  technical_engine.py
haoinvest/guardrails/: __init__.py  alerts.py  emotion.py  pre_trade_data.py  rules.py
haoinvest/market/: __init__.py  akshare_provider.py  ashare_provider.py  crypto_provider.py  provider.py  us_provider.py
haoinvest/portfolio/: manager.py  returns.py
haoinvest/strategy/: optimizer.py  rebalance.py
tests/: conftest.py  test_analysis_cache.py  test_analysis_fundamental.py  test_analysis_peer.py  test_analysis_registry.py  test_analysis_report.py  test_analysis_risk.py  test_analysis_signals.py  test_analysis_technical.py  test_analysis_volume.py  test_db.py  test_db_thesis.py  test_fx.py  test_guardrails_alerts.py  test_guardrails_emotion.py  test_guardrails_pre_trade_data.py  test_guardrails_rules.py  test_guardrails_thesis_alerts.py  test_http_retry.py  test_journal.py  test_models.py
tests/test_cli/: test_analyze.py  test_analyze_run.py  test_journal.py  (+4 more)
(+35 files in other folders)
