[project]
name = "haoinvest"
version = "0.1.0"
description = "Personal investment portfolio management system"
requires-python = ">=3.11"
dependencies = [
    "akshare==1.18.49",
    "pydantic==2.12.5",
    "click==8.3.1",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call external APIs (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
