[project]
name = "haoinvest"
version = "0.1.0"
description = "Personal investment portfolio management system"
requires-python = ">=3.11"
dependencies = [
    "akshare==1.18.49",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "yfinance==1.2.0",
    "typer==0.24.1",
]

[project.scripts]
haoinvest = "haoinvest.cli:app"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.8",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call external APIs (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
